--- a/.github/workflow/update-rsshub-docs.yml
+++ b/.github/workflow/update-rsshub-docs.yml
@@ -8,24 +8,23 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout this repo
+      - name: checkout the RSSHub repo
+        uses: actions/checkout@v2
+        with:
+          repository: DIYgod/RSSHub
+          path: rsshub-app
+          # fetch-depth: 0 # Fetch all history
+      
+      - name: checkout this repo and update the docs
         uses: actions/checkout@v2
         with:
           path: rsshub-docs
           fetch-depth: 0  # Fetch all history
-
-      - name: checkout the RSSHub repo
-        uses: actions/checkout@v2
-        with:
-          path: rsshub-app
-          # fetch-depth: 0 # Fetch all history
-      
-      - name: copy the new docs
         run: |
           cp -r rsshub-app/docs rsshub-docs/docs
           cd rsshub-docs
-          # git config user.name SylleoYr
-          # git config user.email SylleoYr@users.noreply.github.com
+          git config user.name SylleoYr
+          git config user.email SylleoYr@users.noreply.github.com
           git add .
           git commit -m "Docs updated by GitHub Actions"
           git push -u origin master
