--- a/.github/workflows/update-rsshub-docs.yml
+++ b/.github/workflows/update-rsshub-docs.yml
@@ -26,9 +26,8 @@ jobs:
       - name: copy the updated docs
         run: |
           cp -r rsshub-app/docs rsshub-docs/
+          cp rsshub-app/package.json rsshub-docs/
+          cp rsshub-app/yarn.lock rsshub-docs/
+          cp rsshub-app/LICENSE rsshub-docs/
           cd rsshub-docs
-          git config user.name SylleoYr
-          git config user.email SylleoYr@users.noreply.github.com
-          git add .
-          git commit -m "Docs updated by GitHub Actions"
-          git push -u origin master
+          sh check_update.sh
