--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "eslint": "8.9.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-yml": "0.13.0",
+    "eslint-plugin-yml": "0.14.0",
     "fs-extra": "10.0.0",
     "jest": "27.5.1",
     "mockdate": "3.0.5",
@@ -62,10 +62,12 @@
     "prettier": "2.5.1",
     "prettier-check": "2.0.0",
     "pretty-quick": "3.1.3",
-    "remark": "12.0.1",
-    "remark-frontmatter": "2.0.0",
+    "remark": "13.0.0",
+    "remark-frontmatter": "3.0.0",
+    "remark-gfm": "1.0.0",
     "remark-pangu": "2.2.0",
-    "remark-preset-prettier": "0.4.1",
+    "remark-preset-prettier": "0.5.1",
+    "remark-stringify": "9.0.1",
     "staged-git-files": "1.3.0",
     "string-width": "4.2.3",
     "supertest": "6.2.2",
@@ -76,7 +78,7 @@
   "dependencies": {
     "@koa/router": "10.1.1",
     "@postlight/mercury-parser": "2.2.1",
-    "@sentry/node": "6.17.7",
+    "@sentry/node": "6.17.9",
     "aes-js": "3.1.2",
     "art-template": "4.13.2",
     "bbcodejs": "0.0.4",
@@ -96,7 +98,7 @@
     "got": "11.8.3",
     "https-proxy-agent": "5.0.0",
     "iconv-lite": "0.6.3",
-    "instagram-private-api": "1.45.2",
+    "instagram-private-api": "1.45.3",
     "ioredis": "4.28.5",
     "ip": "*",
     "ip-regex": "4.3.0",
