Docs updated by GitHub Actions

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-yml": "0.14.0",
     "fs-extra": "10.1.0",
-    "jest": "28.0.3",
+    "jest": "28.1.0",
     "mockdate": "3.0.5",
     "nock": "13.2.4",
     "nodemon": "2.0.16",
@@ -87,7 +87,7 @@
     "city-timezones": "1.2.0",
     "crypto-js": "4.1.1",
     "currency-symbol-map": "5.0.1",
-    "dayjs": "1.11.1",
+    "dayjs": "1.11.2",
     "dotenv": "16.0.0",
     "emailjs-imap-client": "3.1.0",
     "entities": "3.0.1",
@@ -110,17 +110,19 @@
     "koa-basic-auth": "4.0.0",
     "koa-favicon": "2.1.0",
     "koa-mount": "4.0.0",
-    "lru-cache": "7.8.1",
+    "lru-cache": "7.9.0",
     "lz-string": "1.4.4",
     "mailparser": "3.5.0",
-    "markdown-it": "13.0.0",
+    "markdown-it": "13.0.1",
     "module-alias": "2.2.2",
     "parse-torrent": "9.1.5",
     "pidusage": "3.0.0",
     "plist": "3.0.5",
     "puppeteer": "13.7.0",
+    "puppeteer-extra": "3.2.3",
+    "puppeteer-extra-plugin-stealth": "2.9.0",
     "query-string": "7.1.1",
-    "rand-user-agent": "1.0.60",
+    "rand-user-agent": "1.0.61",
     "require-all": "3.0.0",
     "rss-parser": "3.12.0",
     "showdown": "2.1.0",
