--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-yml": "1.1.0",
     "fs-extra": "10.1.0",
-    "jest": "28.1.3",
+    "jest": "29.0.1",
     "mockdate": "3.0.5",
     "nock": "13.2.9",
     "nodemon": "2.0.19",
@@ -74,6 +74,8 @@
     "tosource": "2.0.0-alpha.3",
     "unified": "9.2.2",
     "vuepress": "1.9.7",
+    "vuepress-plugin-meilisearch": "0.12.2",
+    "vuepress-plugin-sitemap": "2.3.1",
     "yorkie": "2.0.0"
   },
   "dependencies": {
@@ -84,7 +86,7 @@
     "art-template": "4.13.2",
     "bbcodejs": "0.0.4",
     "cheerio": "1.0.0-rc.12",
-    "chrono-node": "2.3.9",
+    "chrono-node": "2.4.1",
     "city-timezones": "1.2.1",
     "crypto-js": "4.1.1",
     "currency-symbol-map": "5.1.0",
@@ -95,12 +97,12 @@
     "etag": "1.8.1",
     "fanfou-sdk": "4.2.0",
     "git-rev-sync": "3.0.2",
-    "googleapis": "105.0.0",
+    "googleapis": "107.0.0",
     "got": "11.8.5",
     "https-proxy-agent": "5.0.1",
     "iconv-lite": "0.6.3",
     "instagram-private-api": "1.45.3",
-    "ioredis": "5.2.2",
+    "ioredis": "5.2.3",
     "ip-regex": "4.3.0",
     "is-localhost-ip": "2.0.0",
     "jsdom": "20.0.0",
@@ -122,7 +124,7 @@
     "puppeteer-extra": "3.3.4",
     "puppeteer-extra-plugin-stealth": "2.11.1",
     "query-string": "7.1.1",
-    "rand-user-agent": "1.0.77",
+    "rand-user-agent": "1.0.78",
     "re2": "1.17.7",
     "require-all": "3.0.0",
     "rss-parser": "3.12.0",
@@ -132,7 +134,7 @@
     "string-similarity": "4.0.4",
     "tiny-async-pool": "2.1.0",
     "torrent-search-api": "2.1.4",
-    "tough-cookie": "4.0.0",
+    "tough-cookie": "4.1.2",
     "tunnel": "0.0.6",
     "twitter-api-v2": "1.12.5",
     "winston": "3.8.1",
