Docs updated by GitHub Actions

--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "@vuepress/plugin-pwa": "1.9.7",
     "@vuepress/shared-utils": "1.9.7",
     "cross-env": "7.0.3",
-    "eslint": "8.23.1",
+    "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-yml": "1.2.0",
     "fs-extra": "10.1.0",
-    "jest": "29.0.3",
+    "jest": "29.1.2",
     "meilisearch": "0.27.0",
     "mockdate": "3.0.5",
     "nock": "13.2.9",
@@ -83,17 +83,18 @@
   "dependencies": {
     "@koa/router": "12.0.0",
     "@postlight/parser": "2.2.2",
-    "@sentry/node": "7.13.0",
+    "@sentry/node": "7.14.0",
     "aes-js": "3.1.2",
     "art-template": "4.13.2",
     "bbcodejs": "0.0.4",
+    "canvas": "2.10.1",
     "cheerio": "1.0.0-rc.12",
     "chrono-node": "2.4.1",
     "city-timezones": "1.2.1",
     "crypto-js": "4.1.1",
     "currency-symbol-map": "5.1.0",
     "dayjs": "1.11.5",
-    "dotenv": "16.0.2",
+    "dotenv": "16.0.3",
     "emailjs-imap-client": "3.1.0",
     "entities": "3.0.1",
     "etag": "1.8.1",
@@ -127,7 +128,7 @@
     "puppeteer-extra": "3.3.4",
     "puppeteer-extra-plugin-stealth": "2.11.1",
     "query-string": "7.1.1",
-    "rand-user-agent": "1.0.82",
+    "rand-user-agent": "1.0.83",
     "re2": "1.17.7",
     "require-all": "3.0.0",
     "rss-parser": "3.12.0",
