--- a/package.json
+++ b/package.json
@@ -50,21 +50,21 @@
   "devDependencies": {
     "@microsoft/eslint-formatter-sarif": "3.0.0",
     "@napi-rs/pinyin": "1.7.1",
-    "@types/koa": "2.13.5",
+    "@types/koa": "2.13.6",
     "@vercel/nft": "0.22.6",
     "@vuepress/plugin-back-to-top": "1.9.9",
     "@vuepress/plugin-google-analytics": "1.9.9",
     "@vuepress/plugin-pwa": "1.9.9",
     "@vuepress/shared-utils": "1.9.9",
     "cross-env": "7.0.3",
-    "eslint": "8.36.0",
+    "eslint": "8.37.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-yml": "1.5.0",
     "fs-extra": "11.1.1",
     "jest": "29.5.0",
     "jest-junit": "15.0.0",
-    "meilisearch": "0.31.1",
+    "meilisearch": "0.32.0",
     "mockdate": "3.0.5",
     "nock": "13.3.0",
     "nodemon": "2.0.22",
@@ -92,12 +92,12 @@
   "dependencies": {
     "@koa/router": "12.0.0",
     "@postlight/parser": "2.2.3",
-    "@sentry/node": "7.45.0",
+    "@sentry/node": "7.46.0",
     "aes-js": "3.1.2",
     "art-template": "4.13.2",
     "bbcodejs": "0.0.4",
     "cheerio": "1.0.0-rc.12",
-    "chrono-node": "2.6.1",
+    "chrono-node": "2.6.2",
     "city-timezones": "1.2.1",
     "crypto-js": "4.1.1",
     "currency-symbol-map": "5.1.0",
@@ -130,8 +130,8 @@
     "module-alias": "2.2.2",
     "pidusage": "3.0.2",
     "plist": "3.0.6",
-    "proxy-chain": "2.2.1",
-    "puppeteer": "19.8.0",
+    "proxy-chain": "2.3.0",
+    "puppeteer": "19.8.2",
     "puppeteer-extra": "3.3.6",
     "puppeteer-extra-plugin-stealth": "2.11.2",
     "query-string": "7.1.3",
@@ -165,8 +165,10 @@
       "lib/**/*.js",
       "!lib/routes/**/*.js",
       "!lib/v2/**/*.js",
-      "!lib/radar-rules.js",
-      "!lib/router.js"
+      "!lib/router.js",
+      "!lib/maintainer.js",
+      "!lib/radar.js",
+      "!lib/radar-rules.js"
     ],
     "bail": true,
     "testEnvironment": "node",
